crates/ark/src/lsp/snapshots/ark__lsp__folding_range__tests__folding_cells.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\n# %% First cell\na\nb\n\n# %% Second cell\nc\n\n# %% Third cell\nd\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 4,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 5,
        start_character: None,
        end_line: 7,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 8,
        start_character: None,
        end_line: 9,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
