crates/ark/src/lsp/snapshots/ark__lsp__folding_range__tests__folding_section_comments.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\n# First section ----\na\nb\n\n## Nested section ----\nc\n\n# Another section ----\nd\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 6,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 5,
        start_character: None,
        end_line: 6,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 8,
        start_character: None,
        end_line: 8,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
