crates/ark/src/lsp/snapshots/ark__lsp__folding_range__tests__folding_section_comments_basic.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\n# First section ----\na\nb\n\n# Second section ----\nc\nd\n\n# %% Chunk section (jupyter-style)\ne\nf\n\n#+ Chunk section (knitr-style)\ng\n# + This is not a chunk\nh\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 4,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 5,
        start_character: None,
        end_line: 15,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 9,
        start_character: None,
        end_line: 12,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 13,
        start_character: None,
        end_line: 16,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
